# python-project-49

./: README.md  pyproject.toml
brain_games/: cli.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_even.py  game_data.py  game_functions.py  game_logic.py  game_states.py  game_utils.py
